# Polymorph

./: .editorconfig  .gitignore  README.md  package.json  pnpm-lock.yaml  tailwind.config.js  tailwind.config.ts  vite.config.ts
assets/src/placeholder/: instance.afphoto
locale/: en.json
src/: app.css  hooks.client.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: config.rs  error.rs  game.rs  instance.rs  main.rs  util.rs
src-tauri/src/models/: instance.rs
src/lib/: stores.ts
src/lib/components/: DirectoryInput.svelte  index.d.ts  index.js
src/lib/components/base/: DirectoryInput.svelte  InstanceCard.svelte  LoadingButton.svelte  index.d.ts  index.ts
src/lib/components/icons/: Tauri.svelte  index.ts
src/lib/components/instance/: CreateInstanceModal.svelte  InstanceCard.svelte  index.ts
src/lib/components/layout/: CreateInstanceModal.svelte  Sidebar.svelte  index.d.ts  index.ts
src/lib/i18n/: index.ts
src/lib/stores/: config.ts  instance.ts
src/lib/themes/: main.ts
src/lib/types/: components.d.ts  general.ts  instance.ts
src/lib/utils/: instance.ts
src/routes/: +error.svelte  +layout.svelte  +layout.ts  +page.svelte
src/routes/instance/[id]/: +page.svelte  +page.ts
src/routes/settings/: +page.svelte
