[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
default-run = "app"
edition = "2021"
rust-version = "1.60"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5.1", features = [] }

[dependencies]
tauri = { version = "1.5.4", features = ["http-request", "fs-all", "path-all", "dialog-open", "window-set-always-on-top", "shell-open"] }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8.8"

open = "5.0.1"
os_info = { version = "3.7.0", default-features = false }

thiserror = "1.0.53"
anyhow = "1.0.78"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
# If you use cargo directly instead of tauri's cli you can use this feature flag to switch between tauri's `dev` and `build` modes.
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
